maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:14: error: not found: value choix
    choix()
    ^Escaper:38: error: not found: value virage
      if (estFaceMur()) {droite();virage-=1}
                                  ^